Sync code that is shared with Android app (#11)